# discord.py-helper

./: .gitignore  README.md  pyproject.toml  requirements.txt
bloom_jewel/discord_utils/: bootstrap.py  errors.py
bloom_jewel/discord_utils/modules/: __init__.py  asyncio.py  config.py  connection.py  shared.py  utils.py
bloom_jewel/discord_utils/plugins/: __init__.py  sync.py  watch.py
